# rememoir

./: .gitignore  77.0  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  rememoir_mvp.py  test.py
.github/workflows/: test.yml
examples/: integrate_with_uassistant.py
src/erabytse_rememoir/: __init__.py  core.py  embedder.py  models.py
tests/: test_basic.py
