[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erabytse-rememoir"
version = "0.1.0"
description = "Cognitive memory for offline AI agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Erabytse", email = "contact@erabytse.github.io"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "lancedb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/erabytse/rememoir"
Repository = "https://github.com/erabytse/rememoir"

[tool.setuptools.packages.find]
where = ["src"]