# pyproject.toml
[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erabytse-rememoir"
version = "0.1.3"
description = "Cognitive memory for offline AI agents — human-centered, local-first, open-source."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Erabytse", email = "contact@erabytse.github.io"}
]
maintainers = [
    {name = "FBF", email = "contact@erabytse.github.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
dependencies = [
    "lancedb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "numpy>=1.21.0"
]
requires-python = ">=3.10"


[project.urls]
Homepage = "https://github.com/erabytse/rememoir"
Repository = "https://github.com/erabytse/rememoir"
Documentation = "https://github.com/erabytse/rememoir#readme"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["erabytse_rememoir*"]